--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ Werkzeug==0.15.5
 numpy>=1.9.2
 scipy>=0.15.1
 scikit-learn>=0.18
-opencv-python==4.0.0.21
-tensorflow==1.13.2
+opencv-python-headless
+tensorflow==1.14
 Keras==2.3.1
 
 
